# SVJ

./: .env.example  .gitignore  AUDIT-REPORT.md  BACKUP-REPORT.md  CLAUDE-zaloha.md  CLAUDE.md  README.md  SVJ-AGENTS-PREHLED.html  TEST-REPORT.md  UX-REPORT-hromadne rozesilani.md  pripravit_prenos.sh  pripravit_usb.sh  pyproject.toml  requirements.txt  spustit.command
.claude/agents/: purge-restore-verify.md
.github/workflows/: tests.yml
app/: config.py  database.py  main.py  utils.py
app/models/: __init__.py  administration.py  common.py  owner.py  payment.py  share_check.py  smtp_profile.py  space.py  sync.py  tax.py  voting.py  water_meter.py
app/routers/: administration.py  bounces.py  dashboard.py  owners.py  settings_page.py  share_check.py  sync.py  tax.py  (+2 more)
data/: Popis_dat_pro_import.md  SVJ_Evidence_Vlastniku_CLEAN.xlsx  svj_backup_20260319_pre_platby.db
docs/: BUSINESS-LOGIC.md  BUSINESS-SUMMARY.md  DEPLOYMENT.md  NAVIGATION.md  NEW_MODULE_CHECKLIST.md  ROUTER_PATTERNS.md  UI_GUIDE.md  UI_PRINCIPLES_PORTABLE.md  USER_ROLES.md  ZADANI-EVIDENCE-PLATEB.docx
scripts/: purge_restore_verify.py
tests/: conftest.py  test_backup.py  test_bank_import.py  test_bounce_service.py  test_contact_import.py  test_csv_comparator.py  test_email_service.py  test_import_mapping.py  test_owner_exchange.py  test_owner_matcher.py  test_payment_advanced.py  test_payment_discrepancy.py  test_payment_matching.py  test_prescription_import.py  test_smoke.py  test_smtp_profile.py  test_tenants.py  test_utils.py  test_voting.py  test_voting_aggregation.py  test_water_meters.py
(+300 files in other folders)
