[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "svj-sprava"
version = "0.1.0"
description = "SVJ automation: per rollam voting, tax distribution, owner sync"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "jinja2>=3.1.4,<4.0",
    "python-multipart>=0.0.12,<1.0",
    "sqlalchemy>=2.0.36,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "openpyxl>=3.1.5,<4.0",
    "python-docx>=1.1.2,<2.0",
    "docxtpl>=0.18.0,<1.0",
    "pdfplumber>=0.11.4,<1.0",
    "pytesseract>=0.3.13,<1.0",
    "Pillow>=11.0.0,<12.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "httpx>=0.28.0,<1.0",
]
